--- a/README
+++ b/README
@@ -1,12 +1,17 @@
-I wanted the actual speed, not an estimate, so I modified gkx86info.
+I love this GKrellM plugin but the homepage is no longer online and i
+could not find a way to contact the original author.
+Since the project was licensed under GPL2, i'm "adopting" and updating it.
 
-Brad Davis
-brad@peakunix.net
+Carlo Casta
+carlo.casta@gmail.com
+
+
+---
+Thanks for original gkfreq to:
+Brad Davis <brad@peakunix.net>
 
 Thanks for gkx86info to:
-
-jake richardson
-jake@asdfnews.org
+Jake Richardson <jake@asdfnews.org>
 
 Thanks for patches to:
 hatdoineed2do@yahoo.co.uk
