--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 I love this GKrellM plugin but the homepage is no longer online and i
 could not find a way to contact the original author.
-Since the project was licensed under GPL2, i'm "adopting" and updating it.
+Since the project was licensed under GPL2, I'm "adopting" and updating it.
 
 ---
 
